Security vulnerability fixes - CSRF token - 4th nov 2022

--- a/includes/css/wcj-admin.css
+++ b/includes/css/wcj-admin.css
@@ -318,3 +318,7 @@ img.wcj-rocket-icon:hover {
 #order_data .order_data_column p {
   word-break: break-word;
 }
+
+.wcj-row td {
+  line-break: anywhere;
+}
