Security vulnerability fixes - 9th nov 2022

--- a/includes/settings/pdf-invoicing/wcj-content-template-custom_doc.html
+++ b/includes/settings/pdf-invoicing/wcj-content-template-custom_doc.html
@@ -1,8 +1,9 @@
-<?php //phpcs:ignore ?>
-<h1>Invoice</h1>
+<h1>Custom Document</h1>
 <p>
 <table class="pdf_invoice_heading_table">
 <tbody>
+	<tr><th>Custom Document Nr.</th><td>[wcj_custom_doc_number]</td></tr>
+	<tr><th>Custom Document Date</th><td>[wcj_custom_doc_date]</td></tr>
 	<tr><th>Invoice Nr.</th><td>[wcj_invoice_number]</td></tr>
 	<tr><th>Invoice Date</th><td>[wcj_invoice_date]</td></tr>
 	<tr><th>Order Nr.</th><td>[wcj_order_number]</td></tr>
